# name: test_deploy_vnfs
  <class 'dict'> {
    'id': '6a15313f-cb0a-4540-baa2-77cc6b3f5b68',
    'serv_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vim_uuid': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
    'vnfd': <class 'BaseDict'>,
  }
---
# name: test_deploy_vnfs.1
  <class 'dict'> {
    'id': '645db4fa-a714-4cba-9617-4001477d1281',
    'serv_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vim_uuid': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
    'vnfd': <class 'BaseDict'>,
  }
---
# name: test_deploy_vnfs.2
  <class 'dict'> {
    'id': '8a0aa837-ec1c-44e5-9907-898f6401c3ae',
    'serv_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vim_uuid': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
    'vnfd': <class 'BaseDict'>,
  }
---
# name: test_destroy_vnfs
  <class 'dict'> {
    'service_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
  }
---
# name: test_fetch_placement
  <class 'dict'> {
    'functions': <class 'list'>,
    'nap': <class 'dict'> {
    },
    'nsd': <class 'BaseDict'>,
    'serv_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'topology': <class 'list'> [
    ],
  }
---
# name: test_prepare_infrastructure
  <class 'dict'> {
    'instance_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vims': <class 'list'> [
      <class 'dict'> {
        'id': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
        'vm_images': <class 'list'> [
          <class 'list'> [
            <class 'dict'> {
              'id': 'eu.sonata-nfv_firewall-vnf_0.2_vdu01',
              'md5': None,
              'url': 'http://registry.sonata-nfv.eu/html/files/VM_images/sonata-VM-2ports.qcow',
            },
          ],
          <class 'list'> [
            <class 'dict'> {
              'id': 'eu.sonata-nfv_iperf-vnf_0.2_vdu01',
              'md5': None,
              'url': 'file:///docker_files/iperf/Dockerfile',
            },
          ],
          <class 'list'> [
            <class 'dict'> {
              'id': 'eu.sonata-nfv_tcpdump-vnf_0.2_vdu01',
              'md5': None,
              'url': 'file:///docker_files/tcpdump/Dockerfile',
            },
          ],
        ],
      },
    ],
  }
---
